# SoccerSimulation2D

./: ChangeLog  Makefile  README.md  agent2d-2.1.0.kdev4  config.h  config.status
.kdev4/: agent2d-2.1.0.kdev4
logs/: player_10.txt  player_11.txt  player_2.txt  player_3.txt  player_4.txt  player_5.txt  player_6.txt  player_7.txt  player_8.txt  player_9.txt
src/: Makefile  Makefile.am  Makefile.in  bhv_basic_move.cpp  bhv_basic_move.h  bhv_basic_offensive_kick.cpp  bhv_basic_offensive_kick.h  bhv_basic_tackle.cpp  bhv_basic_tackle.h  bhv_danger_area_tackle.cpp  bhv_danger_area_tackle.h  bhv_go_to_static_ball.cpp  bhv_go_to_static_ball.h  bhv_goalie_basic_move.cpp  bhv_goalie_basic_move.h  bhv_goalie_chase_ball.cpp  bhv_goalie_chase_ball.h  bhv_goalie_free_kick.h  bhv_penalty_kick.cpp  bhv_penalty_kick.h  bhv_pre_process.cpp  bhv_pre_process.h  bhv_predictor.cpp  bhv_predictor.h  bhv_prepare_set_play_kick.cpp  bhv_prepare_set_play_kick.h  bhv_set_play.cpp  bhv_set_play.h  bhv_set_play_free_kick.cpp  bhv_set_play_free_kick.h  bhv_set_play_goal_kick.cpp  bhv_set_play_goal_kick.h  bhv_set_play_indirect_free_kick.cpp  bhv_set_play_indirect_free_kick.h  bhv_set_play_kick_in.cpp  bhv_set_play_kick_in.h  bhv_set_play_kick_off.cpp  bhv_set_play_kick_off.h  bhv_their_goal_kick_move.cpp  bhv_their_goal_kick_move.h  (+61 more)
src/.deps/: bhv_basic_move.Po  bhv_basic_offensive_kick.Po  bhv_basic_tackle.Po  bhv_danger_area_tackle.Po  bhv_go_to_static_ball.Po  bhv_goalie_basic_move.Po  bhv_goalie_chase_ball.Po  bhv_goalie_free_kick.Po  bhv_penalty_kick.Po  bhv_pre_process.Po  bhv_predictor.Po  bhv_prepare_set_play_kick.Po  bhv_set_play.Po  bhv_set_play_free_kick.Po  bhv_set_play_goal_kick.Po  bhv_set_play_indirect_free_kick.Po  bhv_set_play_kick_in.Po  bhv_set_play_kick_off.Po  bhv_their_goal_kick_move.Po  block.Po  body_kick_to_corner.Po  defensive_action.Po  dfs_block.Po  dfs_mark.Po  dribble.Po  main_coach.Po  main_player.Po  main_trainer.Po  markOn.Po  neck_goalie_turn_neck.Po  offensive_action.Po  offs_pass.Po  pass.Po  role_center_back.Po  role_center_forward.Po  role_defensive_half.Po  role_goalie.Po  role_offensive_half.Po  role_sample.Po  role_side_back.Po  (+8 more)
src/formations-dt/: before-kick-off.conf  normal-formation.conf
